--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Hello, I'm Kishore! 👋</h1>
+            <h1>Kishore</h1>
             <p class="tagline">Full Stack Developer</p>
             <div class="cta-buttons">
                 <a href="#contact" class="cta-primary">Contact Me</a>
