--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="cta-buttons">
                 <a href="#contact" class="cta-primary">Contact Me</a>
                 <!-- <a href="#projects" class="cta-secondary">View Projects</a> -->
-                <a href="assets/Resume.pdf" target="_blank" class="cta-secondary">CV</a>
+                <a href="Resume.pdf" target="_blank" class="cta-secondary">CV</a>
                 
             </div>
         </div>
@@ -174,7 +174,7 @@
       <h2>🏆 Achievements</h2>
       <div class="achievements-grid">
         <div class="achievement-card">
-          <img src="assets/leetcode.png" alt="LeetCode Logo" class="achievement-logo">
+          <img src="leetcode.png" alt="LeetCode Logo" class="achievement-logo">
           <h3>LeetCode</h3>
           <p>Max Rating: 1350</p>
           <p>250+ Problems Solved</p>
@@ -186,7 +186,7 @@
 
         
         <div class="achievement-card">
-          <img src="assets/edited.JPG" alt="PEC" class="achievement-picture"">
+          <img src="edited.JPG" alt="PEC" class="achievement-picture"">
           <h3>PecHacks'24 Track Winner</h3>
           <p>Panimalar College of Engineering</p>
           <p>2024</p>
@@ -199,7 +199,7 @@
         </div>
 
         <div class="achievement-card">
-            <img src="assets/projectexpo.jpg" alt="Project Expo Logo" class="achievement-picture">
+            <img src="projectexpo.jpg" alt="Project Expo Logo" class="achievement-picture">
             <h3>Project Expo Winner</h3>
             <p>Karpagam Institute of Technology</p>
             <p>2024</p>
